Arrumei o background/posiçoes das pastas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./scss/css/style.css" />
     <link
       rel="shortcut icon"
       href="./assets/FAVICON-SPACEX.png"
@@ -27,7 +27,7 @@
       <div class="text-center">
         <img
           class="img-fluid topLogo mt-4 mb-3"
-          src="./assets/logoOneBitDark.png"
+          src="./scss/others/img/logoOneBitDark.png"
           alt="Logo da spaceX"
         />
       </div>
