--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./scss/css/style.css" />
     <link
       rel="shortcut icon"
-      href="./assets/FAVICON-SPACEX.png"
+      href="./.github/FAVICON-SPACEX.png"
       type="image/x-icon"
     />
     <!-- Css Bootstrap -->
