atulizações e modificações pessoais

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./scss/css/style.css" />
     <link
       rel="shortcut icon"
-      href="./.github/FAVICON-SPACEX.png"
+      href="./scss/others/img/FAVICON-SPACEX.png"
       type="image/x-icon"
     />
     <!-- Css Bootstrap -->
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Rumo a marte-OnebitX</title>
+    <title>Rumo a marte - OnebitX</title>
   </head>
   <body class="py-5">
     <!-- form -->
