Atualização e modificação pessoal

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Rumo a marte - OnebitX</title>
+    <title>Rumo a marte | OnebitX</title>
   </head>
   <body class="py-5">
     <!-- form -->
